--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,15 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&display=swap');
+
+#input {
+	@apply w-full rounded-lg border border-gray p-4 text-darkSlateGray placeholder:text-gray;
+}
+
+.form-btn {
+	@apply mt-4 w-full rounded-lg bg-darkSlateGray px-6 py-4 text-sm font-semibold text-white shadow-2xl transition-all duration-150 hover:bg-tomato md:text-base;
+}
+
+#dismiss-btn {
+	@apply w-full rounded-lg bg-darkSlateGray px-6 py-3 text-sm font-semibold text-white shadow-2xl transition-all duration-150 hover:bg-tomato md:text-base;
+}
